@@ -150,6 +150,10 @@ STATEMENT_CREATE_TOPIC_PAGE_NAME_INDEX = \
     CREATE INDEX jam_i_topic_pgnm on jam_topic (page_name) 
 STATEMENT_CREATE_TOPIC_PAGE_NAME_LOWER_INDEX = \
     CREATE INDEX jam_i_topic_pgnml on jam_topic (page_name_lower) 
+STATEMENT_CREATE_TOPIC_VIRTUAL_WIKI_INDEX = \
+    CREATE INDEX jam_i_topic_vwiki on jam_topic (virtual_wiki_id)
+STATEMENT_CREATE_TOPIC_NAMESPACE_INDEX = \
+    CREATE INDEX jam_i_topic_nmsp on jam_topic (namespace_id) 
 STATEMENT_CREATE_TOPIC_CURRENT_VERSION_INDEX = \
     CREATE INDEX jam_i_topic_cver on jam_topic (current_version_id) 
 STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
